log
Fri 12 Aug 2022 09:26:45 PM UTC: 
 tests:  0|7
total_score: 0/70
7a20ce4
Fri 12 Aug 2022 09:43:29 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:46:18: error: expected expression before ‘]’ token
   46 |   x= sumaN(array[],m);
      |                  ^
exercises.c:47:7: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   47 |   suma=x;
      |       ^
exercises.c:40:7: error: variable ‘array’ set but not used [-Werror=unused-but-set-variable]
   40 |   int array[m];
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f1581fa
Fri 12 Aug 2022 09:43:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:46:18: error: expected expression before ‘]’ token
   46 |   x= sumaN(array[],m);
      |                  ^
exercises.c:40:7: error: variable ‘array’ set but not used [-Werror=unused-but-set-variable]
   40 |   int array[m];
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a7b1e83
Fri 12 Aug 2022 09:44:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:46:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   46 |   x= sumaN(array[m],m);
      |            ~~~~~^~~
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ec3f382
Fri 12 Aug 2022 09:57:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:46:12: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   46 |   x= sumaN(*array,m);
      |            ^~~~~~
      |            |
      |            int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
7475058
Fri 12 Aug 2022 09:58:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:46:12: error: passing argument 1 of ‘sumaN’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   46 |   x= sumaN(&array,m);
      |            ^~~~~~
      |            |
      |            int (*)[m]
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int (*)[m]’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
09790c0
Fri 12 Aug 2022 10:10:30 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:43:13: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   43 |     array[i]=a[i];
      |             ^
exercises.c:46:12: error: passing argument 1 of ‘sumaN’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   46 |   x= sumaN(array,m);
      |            ^~~~~
      |            |
      |            int **
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int **’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
9ae54c3
Fri 12 Aug 2022 10:12:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:46:18: error: expected expression before ‘]’ token
   46 |   x= sumaN(array[],m);
      |                  ^
exercises.c:40:7: error: variable ‘array’ set but not used [-Werror=unused-but-set-variable]
   40 |   int array[m];
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2bf8dd1
Fri 12 Aug 2022 10:29:48 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:13: error: expected expression before ‘]’ token
   41 |   x=sumaN(a[],n);
      |             ^
exercises.c:43:9: error: subscripted value is neither array nor pointer nor vector
   43 |     k+=k[i];
      |         ^
Compilation failed
7635e3a
Fri 12 Aug 2022 10:30:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:13: error: expected expression before ‘]’ token
   41 |   x=sumaN(a[],n);
      |             ^
Compilation failed
4575d02
Fri 12 Aug 2022 10:30:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:12: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   x=sumaN(a[n],n);
      |           ~^~~
      |            |
      |            int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3210f35
